--- a/status.html
+++ b/status.html
@@ -85,6 +85,9 @@
   <button class="back-btn" onclick="window.location.href='index.html'">← Back to Dashboard</button>
   <h2>📬 Requests to Buy Your Crops</h2>
   <div id="requestContainer" class="container"></div>
+  <h2 style="text-align:center; margin-top: 3rem;">📤 Requests You Have Sent</h2>
+<div id="sentRequestsContainer" class="container"></div>
+
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
@@ -128,39 +131,66 @@
       loadRequests();
     });
 
-    async function loadRequests() {
-      const q = query(collection(db, "requests"), where("sellerId", "==", currentUser.uid));
-      const snapshot = await getDocs(q);
+   async function loadRequests() {
+  const receivedQ = query(collection(db, "requests"), where("sellerId", "==", currentUser.uid));
+  const sentQ = query(collection(db, "requests"), where("buyerId", "==", currentUser.uid));
 
-      if (snapshot.empty) {
-        container.innerHTML = "<p>No requests yet.</p>";
-        return;
-      }
+  const [receivedSnap, sentSnap] = await Promise.all([
+    getDocs(receivedQ),
+    getDocs(sentQ)
+  ]);
 
-      container.innerHTML = "";
-      for (let docSnap of snapshot.docs) {
-        const data = docSnap.data();
-        const listingRef = doc(db, "listings", data.listingId);
-        const listingSnap = await getDoc(listingRef);
-        const listingData = listingSnap.exists() ? listingSnap.data() : {};
+  const receivedContainer = document.getElementById("requestContainer");
+  const sentContainer = document.getElementById("sentRequestsContainer");
 
-        const div = document.createElement("div");
-        div.className = "listing";
-        div.innerHTML = `
-          <strong>📦 Requested Crop:</strong> ${listingData.cropName || "N/A"}<br>
-          <strong>👤 Buyer ID:</strong> <span class="buyer-id">${data.buyerId}</span><br>
-          <strong>🗓 Requested:</strong> ${new Date(data.createdAt).toLocaleString()}<br>
-          <strong>📌 Status:</strong> <span class="status-text">${data.status}</span><br>
-          ${data.status === "pending" ? `
-            <div class="action-buttons">
-              <button class="accept-btn" onclick="updateRequestStatus('${docSnap.id}', 'accepted')">✅ Accept</button>
-              <button class="reject-btn" onclick="updateRequestStatus('${docSnap.id}', 'rejected')">❌ Reject</button>
-            </div>
-          ` : ''}
-        `;
-        container.appendChild(div);
-      }
+  receivedContainer.innerHTML = "";
+  sentContainer.innerHTML = "";
+
+  // ✅ Display requests you received
+  if (receivedSnap.empty) {
+    receivedContainer.innerHTML = "<p>No incoming requests.</p>";
+  } else {
+    for (let docSnap of receivedSnap.docs) {
+      const data = docSnap.data();
+      const div = document.createElement("div");
+      div.className = "listing";
+
+      div.innerHTML = `
+        <strong>📦 Crop:</strong> ${data.cropName || 'N/A'}<br>
+        <strong>👤 Buyer ID:</strong> ${data.buyerId}<br>
+        <strong>🗓 Date:</strong> ${new Date(data.createdAt).toLocaleString()}<br>
+        <strong>Status:</strong> ${data.status}<br>
+        ${data.status === "pending" ? `
+          <div class="action-buttons">
+            <button class="accept-btn" onclick="updateRequestStatus('${docSnap.id}', 'accepted')">✅ Accept</button>
+            <button class="reject-btn" onclick="updateRequestStatus('${docSnap.id}', 'rejected')">❌ Reject</button>
+          </div>
+        ` : ""}
+      `;
+      receivedContainer.appendChild(div);
     }
+  }
+
+  // ✅ Display requests you sent
+  if (sentSnap.empty) {
+    sentContainer.innerHTML = "<p>You have not sent any requests.</p>";
+  } else {
+    for (let docSnap of sentSnap.docs) {
+      const data = docSnap.data();
+      const div = document.createElement("div");
+      div.className = "listing";
+
+      div.innerHTML = `
+        <strong>📦 Listing ID:</strong> ${data.listingId || 'N/A'}<br>
+        <strong>👤 Buyer ID:</strong> ${data.buyerId || 'N/A'}<br>
+        <strong>👤 Seller ID:</strong> ${data.sellerId}<br>
+        <strong>🗓 Sent:</strong> ${new Date(data.createdAt).toLocaleString()}<br>
+        <strong>Status:</strong> ${data.status}<br>
+      `;
+      sentContainer.appendChild(div);
+    }
+  }
+}
 
     window.updateRequestStatus = async function (requestId, status) {
       try {
