--- a/profile.html
+++ b/profile.html
@@ -2,84 +2,151 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Farmer Profile – KrishiNect</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
+    body {
+      background-color: #f4fff4;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 2rem;
+      background: #4caf50;
+      color: white;
+      height: 80px;
+    }
+
     .profile-header {
       text-align: center;
-      margin-top: 2rem;
+      margin: 2rem auto 1rem;
     }
 
     .profile-header h2 {
       color: #2e7d32;
+      font-size: 2rem;
     }
 
-    .listing {
-      background-color: #ffffff;
-      padding: 1rem;
+    .listing-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 2rem;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    .listing-card {
+      background: white;
       border-radius: 10px;
-      border-left: 4px solid #4CAF50;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      min-width: 220px;
-      max-width: 250px;
-      flex: 1 1 220px;
-      position: relative;
+      padding: 1rem 1.5rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+      border-left: 4px solid #4caf50;
+      transition: transform 0.2s;
+    }
+
+    .listing-card:hover {
+      transform: translateY(-4px);
+    }
+
+    .listing-card h4 {
+      margin-bottom: 0.5rem;
+      color: #2e7d32;
+    }
+
+    .listing-card p {
+      margin: 0.2rem 0;
+      color: #444;
     }
 
     .delete-btn {
-      background-color: #d32f2f;
+      margin-top: 1rem;
+      padding: 8px 12px;
+      background: #d32f2f;
       color: white;
       border: none;
       border-radius: 6px;
-      padding: 6px 10px;
       cursor: pointer;
-      margin-top: 10px;
     }
 
     .delete-btn:hover {
-      background-color: #b71c1c;
+      background: #b71c1c;
+    }
+
+    .logout-btn {
+      background: #d32f2f;
+      color: white;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    .logout-btn:hover {
+      background: #c62828;
+    }
+
+    .profile-summary {
+      text-align: center;
+      margin-top: -1rem;
+      color: #333;
+    }
+
+    .back-btn {
+      justify-self: left;
+      background: white;
+      border: 1px solid #4caf50;
+      padding: 8px 14px;
+      border-radius: 6px;
+      color: #2e7d32;
+      font-weight: 500;
+      cursor: pointer;
+    }
+
+    .back-btn:hover {
+      background: #e8f5e9;
     }
   </style>
 </head>
 <body>
-  <button class="back-btn" onclick="window.location.href='index.html'">← Back to Dashboard</button>
-  <button class="logout-btn" onclick="logout()">Logout</button>
 
-  <div class="profile-header">
-    <h2 id="welcome">Welcome, Farmer!</h2>
-    <p>Your Crop Listings:</p>
+  <div class="header">
+    
+    <button class="logout-btn" onclick="logout()">Logout</button>
   </div>
 
-  <div id="myListings" class="container"></div>
+  <div class="profile-header">
+    
+    <h2 id="welcome">Welcome, Farmer!</h2>
+    <p class="profile-summary" id="emailDisplay"></p>
+    <h3 style="margin-top: 2rem;">Your Crop Listings:</h3>
+    <button class="back-btn" onclick="window.location.href='index.html'">← Back to Dashboard</button>
+  </div>
+
+  <div id="myListings" class="listing-grid"></div>
+  
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
-      getAuth,
-      onAuthStateChanged,
-      signOut
+      getAuth, onAuthStateChanged, signOut
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import {
-      getFirestore,
-      doc,
-      getDoc,
-      collection,
-      query,
-      where,
-      getDocs,
-      deleteDoc
+      getFirestore, collection, query, where, getDocs, deleteDoc, doc
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-    // ✅ Use your actual Firebase config
-   const firebaseConfig = {
-  apiKey: "AIzaSyDazi9i6ZyQDfPrk8gx4pc1sp2RJvA2hNM",
-  authDomain: "krishinect-39b8e.firebaseapp.com",
-  projectId: "krishinect-39b8e",
-  storageBucket: "krishinect-39b8e.firebasestorage.app",
-  messagingSenderId: "894539525913",
-  appId: "1:894539525913:web:1100591bbfc25c7148df88"
-};
+    const firebaseConfig = {
+      apiKey: "AIzaSyDazi9i6ZyQDfPrk8gx4pc1sp2RJvA2hNM",
+      authDomain: "krishinect-39b8e.firebaseapp.com",
+      projectId: "krishinect-39b8e",
+      storageBucket: "krishinect-39b8e.appspot.com",
+      messagingSenderId: "894539525913",
+      appId: "1:894539525913:web:1100591bbfc25c7148df88"
+    };
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -93,53 +160,40 @@
       }
 
       currentUser = user;
-
-      try {
-        const userDoc = await getDoc(doc(db, "farmers", currentUser.uid));
-        const userData = userDoc.data();
-        const userName = userData?.name || currentUser.email.split("@")[0];
-
-        document.getElementById("welcome").innerText = `Welcome, ${userName}!`;
-        loadMyListings();
-      } catch (err) {
-        console.error("Error fetching user data:", err);
-        document.getElementById("welcome").innerText = `Welcome, ${currentUser.email}`;
-      }
+      document.getElementById("welcome").textContent = `Welcome, ${user.displayName || user.email.split("@")[0].toUpperCase()}!`;
+      document.getElementById("emailDisplay").textContent = user.email;
+      loadMyListings();
     });
 
     async function loadMyListings() {
       const q = query(collection(db, "listings"), where("userId", "==", currentUser.uid));
-      const snapshot = await getDocs(q);
+      const querySnapshot = await getDocs(q);
       const container = document.getElementById("myListings");
       container.innerHTML = "";
 
-      if (snapshot.empty) {
-        container.innerHTML = "<p>No listings yet.</p>";
-        return;
-      }
-
-      snapshot.forEach((docSnap) => {
+      querySnapshot.forEach((docSnap) => {
         const data = docSnap.data();
         const div = document.createElement("div");
-        div.className = "listing";
+        div.className = "listing-card";
+
         div.innerHTML = `
           <h4>${data.cropName}</h4>
-          <p>Quantity: ${data.quantity}</p>
-          <p>Location: ${data.location}</p>
-          <p>Posted: ${new Date(data.date).toLocaleDateString()}</p>
-          <button class="delete-btn" onclick="deleteListing('${docSnap.id}')">🗑 Delete</button>
+          <p>📦 Quantity: ${data.quantity}</p>
+          <p>📍 Location: ${data.location}</p>
+          <p>🗓 Posted: ${new Date(data.date).toLocaleDateString()}</p>
+          <button class="delete-btn" onclick="deleteListing('${docSnap.id}')"><i class="fas fa-trash"></i> Delete</button>
         `;
+
         container.appendChild(div);
       });
     }
 
     window.deleteListing = async function (id) {
       const confirmDelete = confirm("Are you sure you want to delete this listing?");
-      if (!confirmDelete) return;
-
-      await deleteDoc(doc(db, "listings", id));
-      alert("Listing deleted.");
-      loadMyListings();
+      if (confirmDelete) {
+        await deleteDoc(doc(db, "listings", id));
+        loadMyListings();
+      }
     };
 
     window.logout = async function () {
